# JUCE_Scanner

./: CMakeLists.txt  CompiledShaders.h  Main.cpp  MainComponent.cpp  MainComponent.h  README.md  ScannerPlugin.h  ScannerVoice.cpp  ScannerVoice.h  ScannerVoice2.cpp  ScannerVoice3.cpp  ScannerVoice3.h  ScannerVoiceThreads.cpp  SynthAudioSource.cpp  SynthAudioSource.h  WaveTerrainWindow.cpp  WaveTerrainWindow.h  filter.cpp  filter.h  log_value.cpp  log_value.h  scanner.cpp  scanner.h  scanner2.cpp  scanner_window.cpp  scanner_window.h  snippets  todo.org  wavfile.cpp  wavfile.h
.github/: FUNDING.yml
.github/workflows/: juce_plugin_ci.yml
scripts/: check_lipshitz.py  plot.py  plot.py~
shaders/: wave_shader.frag  wave_shader.vert
